p3/confs/argocd_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: argocd
  name: argocd
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
