p3/confs/dev_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: dev
  name: dev
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
