p3/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    -  host: kubernetes.docker.internal
       http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    -  host: kubernetes.docker.internal
       http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: development
                port:
                  number: 8888
